--- a/PM2E107/MainPage.xaml
+++ b/PM2E107/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PM2E107.MainPage">
+             x:Class="PM2E107.MainPage"
+             Title="Nuevo Sitio">
 
     <StackLayout Padding="20" Spacing="5" VerticalOptions="StartAndExpand">
 
