--- a/PM2E107/Views/Mapa.xaml
+++ b/PM2E107/Views/Mapa.xaml
@@ -2,8 +2,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PM2E107.Views.Mapa"
+             xmlns:mapas="clr-namespace:Microsoft.Maui.Controls.Maps;assembly=Microsoft.Maui.Controls.Maps"
              Title="Mapa de Sitio">
 
+    <mapas:Map x:Name="mapaSitio"/>
 
-   
+
 </ContentPage>
